<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_new_type">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="638dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/howOftenWateringText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_often_watering" />

        <TextView
            android:id="@+id/howOftenFertilizingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_often_fertilizing" />

        <TextView
            android:id="@+id/howOftenSpayingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_often_spraying" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:text="@string/add_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>