<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editPlantLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addEditTitleText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/add_plant"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameField"
        android:layout_width="289sp"
        android:layout_height="56sp"
        android:layout_marginTop="150dp"
        android:hint="@string/plant_name_placeholder"
        android:background="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditTitleText" />
    <!--
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/typeField"
        android:layout_width="289dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:hint="@string/plant_type_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />
    -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ageField"
        android:layout_width="289sp"
        android:layout_height="56sp"
        android:layout_marginTop="24dp"
        android:hint="@string/plant_age_placeholder"
        android:background="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantTypeSpinner" />

    <Switch
        android:id="@+id/indoor_outdoor_switch"
        android:layout_width="289sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minHeight="48dp"
        android:scrollbarSize="8sp"
        android:text="@string/is_plant_home_switch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageField"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/accentColor"
        android:onClick="addPlantAndClosePage"
        android:text="@string/add_button"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indoor_outdoor_switch" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/main_plant_ico"
        app:layout_constraintBottom_toTopOf="@+id/nameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEditTitleText"
        app:srcCompat="@drawable/plant_icon" />

    <ImageButton
        android:id="@+id/goBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:backgroundTint="@color/lightGrey"
        android:contentDescription="@string/go_back"
        android:onClick="closeSchedule"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/keyboard_arrow_right_24px"
        app:tint="@color/textColor" />

    <Spinner
        android:id="@+id/plantTypeSpinner"
        android:layout_width="289sp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

</androidx.constraintlayout.widget.ConstraintLayout>